Refactor Engine logic and add oxygen mechanics
Moved Engine class to its own file and enhanced game logic to include oxygen management and contaminated cylinders. Updated Ferramentas.js to support contaminated oxygen cylinders, adjusted Jogo.js to use new Engine and oxygen logic, and added dependencies for terminal color and figlet support.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ansi-colors": "^4.1.3",
     "bycontract": "^2.0.11",
+    "figlet": "^1.8.2",
     "prompt-sync": "^4.2.0"
   }
 }
